--- a/Yanez-Portfolio/index.html
+++ b/Yanez-Portfolio/index.html
@@ -8,28 +8,34 @@
 </head>
 <body>
 
-  <header>
-    <h1>Yanez' Portfolio</h1>
+<header>
+  <h1>Welcome to my Yane'z Portfolio</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="pages/about.html">About</a>
+    <a href="pages/education.html">Education</a>
+    <a href="pages/skills.html">Skills</a>
+    <a href="pages/projects.html">Projects</a>
+    <a href="pages/assets.html">Assets</a>
+    <a href="pages/contact.html">Contact</a>
+  </nav>
+</header>
 
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="pages/about.html">About</a>
-      <a href="pages/education.html">Education</a>
-      <a href="pages/skills.html">Skills</a>
-      <a href="pages/work-experience.html">Work Experience</a>
-      <a href="pages/volunteer.html">Volunteer</a>
-      <a href="pages/projects.html">Projects</a>
-      <a href="pages/contact.html">Contact</a>
-    </nav>
-  </header>
+<main>
+  <h2>Welcome</h2>
+  <p>
+    Welcome to my professional portfolio.  
+    This site highlights my education, skills, projects, and background.
+  </p>
+</main>
 
-  <main>
-    <h2>Welcome</h2>
-    <p>
-      This is my personal portfolio website.  
-      Here you will find my education, skills, projects, and experience.
-    </p>
-  </main>
+<footer>
+  <p>© 2026 Yanez' Portfolio</p>
+  <p>
+    <a href="https://github.com/yourusername" target="_blank">GitHub</a> |
+    <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+  </p>
+</footer>
 
-  <footer>
-    <p
+</body>
+</html>
