--- a/Yanez-Portfolio/index.html
+++ b/Yanez-Portfolio/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <h1>Welcome to my Yane'z Portfolio</h1>
+  <h1>Nahum Yane'z Portfolio</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="pages/about.html">About</a>
